--- a/streamlits/secrets.toml
+++ b/streamlits/secrets.toml
@@ -1,1 +1,1 @@
-API_KEY = "tgp_v1_QAcdqC6x_OYFr3kzFdQdCAEZS-inb7GQQROHQogjN9M"
+Together_AI_API_KEY = "tgp_v1_QAcdqC6x_OYFr3kzFdQdCAEZS-inb7GQQROHQogjN9M"
